# DiceRoll-new

./: .gitignore  CMakeLists.txt  vcpkg.json
data/: character_classes.json  feats.json  races.json
src/: character.cpp  character.cppm  main.cpp  mechanics.cppm
test/: test.cpp
